sjeng/use_undefined_identifier/c1/CheckBadFlow
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1009:1: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
CheckBadFlow_pawnmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1010:1: error: use of undeclared identifier 'CheckBadFlow_knightmated'
CheckBadFlow_knightmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1011:1: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
CheckBadFlow_bishopmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1012:1: error: use of undeclared identifier 'CheckBadFlow_rookmated'
CheckBadFlow_rookmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1013:1: error: use of undeclared identifier 'CheckBadFlow_queenmated'
CheckBadFlow_queenmated = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1277:12: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
if ( v3 != CheckBadFlow_pawnmated ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1287:14: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
if ( !( v3 | CheckBadFlow_pawnmated) ) 
             ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1296:12: error: use of undeclared identifier 'CheckBadFlow_knightmated'
if ( v2 == CheckBadFlow_knightmated ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1308:14: error: use of undeclared identifier 'CheckBadFlow_knightmated'
if ( !( v2 | CheckBadFlow_knightmated) ) 
             ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1315:13: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
if ( v15 == CheckBadFlow_bishopmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1330:15: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
if ( !( v15 | CheckBadFlow_bishopmated) ) 
              ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1340:13: error: use of undeclared identifier 'CheckBadFlow_rookmated'
if ( v36 != CheckBadFlow_rookmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1346:20: error: use of undeclared identifier 'CheckBadFlow_rookmated'
else if ( !( v36 | CheckBadFlow_rookmated) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1355:13: error: use of undeclared identifier 'CheckBadFlow_queenmated'
if ( v29 != CheckBadFlow_queenmated ) 
            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1361:20: error: use of undeclared identifier 'CheckBadFlow_queenmated'
else if ( !( v29 | CheckBadFlow_queenmated) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1407:7: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
v40 = CheckBadFlow_pawnmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1410:7: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
v41 = CheckBadFlow_bishopmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1413:1: error: use of undeclared identifier 'CheckBadFlow_pawnmated'
CheckBadFlow_pawnmated = v40; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1414:1: error: use of undeclared identifier 'CheckBadFlow_bishopmated'
CheckBadFlow_bishopmated = v41; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1415:7: error: use of undeclared identifier 'CheckBadFlow_rookmated'
v42 = CheckBadFlow_rookmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1418:7: error: use of undeclared identifier 'CheckBadFlow_queenmated'
v43 = CheckBadFlow_queenmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1421:1: error: use of undeclared identifier 'CheckBadFlow_rookmated'
CheckBadFlow_rookmated = v42; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1422:1: error: use of undeclared identifier 'CheckBadFlow_queenmated'
CheckBadFlow_queenmated = v43; 
^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1423:7: error: use of undeclared identifier 'CheckBadFlow_knightmated'
v44 = CheckBadFlow_knightmated - 1; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/partner.c:1426:1: error: use of undeclared identifier 'CheckBadFlow_knightmated'
CheckBadFlow_knightmated = v44; 
^
25 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/CheckBadFlow/src/obj/partner.o] Error 1
